--- a/styles.css
+++ b/styles.css
@@ -21,21 +21,22 @@ body {
     padding-top: 15px;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    border: 1px solid black;
     background-color: #0ea5e9;
     color: white;
 }
 
 .dashboard {
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     font-size: 25px;
     font-weight: bold;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 #dash {
-    width: 50px;
+    width: 40px;
+    margin-right: 10px;
 }
 
 .sidebar-containers {
@@ -45,10 +46,11 @@ body {
 }
 
 .sidebar-icon {
-    margin-right: 10px;
+    margin-right: 20px;
     filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(99deg) brightness(103%) contrast(103%);
     height: auto;
-    width: 30px;
+    width: 20px;
+    align-self: center;
 }
 
 .settings-container {
@@ -65,25 +67,127 @@ body {
 
 .sidebar-top {
     display: grid;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    padding-left: 8px;
     gap: 15px;
     font-size: 20px;
+    font-weight: bold;
 }
 
 .sidebar-bottom {
     display: grid;
+    padding-left: 8px;
     gap: 15px;
     font-size: 20px;
+    font-weight: bold;
 }
 
 .header {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: 1fr 1fr;
     border: 1px solid black;
+}
+
+.search {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    display: flex;
+    margin-left: 50px;
+}
+
+.searchbar {
+    width: 90%;
+    height: 30px;
+    background-color: #E8E8E8;
+    align-self: center;
+    border-radius: 20px;
+    margin-left: 20px;
+}
+
+.profile {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo {
+    width: 20px;
+    height: auto;
+    cursor: pointer;
+}
+
+#profile-logo {
+    width: 25px;
+}
+
+.pikachu {
+    width: auto;
+    height: auto;
+    max-width: 40px;
+    max-height: 40px;
+    margin-left: 30px;
+    margin-right: 30px;
+    cursor: pointer;
+}
+
+.left-profile {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: flex;
+    margin-left: 50px;
+    align-items: center;
+}
+
+.pikachu-big {
+    width: auto;
+    height: auto;
+    max-width: 50px;
+    max-height: 50px;
+    margin-right: 20px;
+}
+
+.small-text {
+    font-size: 12px;
+    font-weight: 900;
+    margin-bottom: 5px;
+}
+
+.big-text {
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.bold {
+    font-weight: 900;
+}
+
+.right-profile {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    display: flex;
+    align-items: center;
+    
+}
+
+.button {
+    background-color: #0ea5e9;
+    height: 40px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 20px;
+    margin-right: 30px;
+    font-weight: 900px;
 }
 
 .main-content {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    
 }
