--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
 }
 
 body { 
-    border: 1px solid black;
     height: 100vh;
 }
 
@@ -88,7 +87,6 @@ body {
     display: grid;
     grid-template-columns: 3fr 2fr;
     grid-template-rows: 1fr 1fr;
-    border: 1px solid black;
 }
 
 .search {
@@ -190,4 +188,64 @@ body {
 .main-content {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    grid-template-rows: 1fr 12fr 1fr;
+    border: 1px solid black;
+    background-color: whitesmoke;
+}
+
+.title {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    font-size: 20px;
+    border: 1px solid black;
+    display: flex;
+    align-items: flex-end;
+    font-weight: bold;
+    margin-left: 20px;
+}
+
+.cards {
+    margin-left: 20px;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    border: 1px solid black;
+    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.card {
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.card-text {
+    margin-top: 30px;
+    margin-left: 20px;
+}
+
+.card-icons {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 30px;
+    margin-right: 20px;
+}
+
+.card-icon {
+    height: auto;
+    width: 20px;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.card-title {
+    font-weight: 900;
+}
+
+.subtext {
+    color: grey;
+    font-size: 12px;
 }
