--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,8 @@ body {
     display: grid;
     grid-template-columns: 3fr 2fr;
     grid-template-rows: 1fr 1fr;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .search {
@@ -183,15 +185,13 @@ body {
     border-radius: 20px;
     margin-right: 30px;
     font-weight: 900px;
+    cursor: pointer;
 }
 
 .main-content {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
     display: grid;
     grid-template-columns: 5fr 2fr;
-    grid-template-rows: 1fr 12fr 1fr;
-    border: 1px solid black;
+    grid-template-rows: 1.5fr 6fr 6fr 1.5fr;
     background-color: whitesmoke;
 }
 
@@ -199,18 +199,17 @@ body {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     font-size: 20px;
-    border: 1px solid black;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     font-weight: bold;
     margin-left: 20px;
+    padding-top: 10px;
 }
 
 .cards {
     margin-left: 20px;
     grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    border: 1px solid black;
+    grid-row: 2 / 4;
     gap: 20px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -218,7 +217,6 @@ body {
 
 .card {
     background-color: white;
-    border: 1px solid black;
     border-radius: 10px;
 }
 
@@ -248,4 +246,108 @@ body {
 .subtext {
     color: grey;
     font-size: 12px;
+}
+
+.top-section {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.announcements {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    font-size: 20px;
+    font-weight: 900;
+    margin-left: 20px;
+    padding-top: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.announce-card {
+    border: 1px solid black;
+    margin-left: 20px;
+    padding-top: 20px;
+    padding-left: 15px;
+    padding-bottom: 20px;
+    margin-right: 30px;
+    border-radius: 10px;
+    background-color: white;
+    height: 80%;
+}
+
+.announce-text {
+    font-size: 15px;
+    font-weight: 900;
+}
+
+.community-text, .updated-text {
+    margin-top: 15px;
+}
+
+.divider {
+    margin-top: 15px;
+    background-color: grey;
+    width: 95%;
+    height: 1px;
+}
+
+.bottom-section {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+}
+
+.trending {
+    margin-left: 20px;
+    font-size: 20px;
+    font-weight: 900;
+    padding-bottom: 10px;
+    border: 1px solid black;
+}
+
+.trending-card {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 30px;
+    border-radius: 10px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid black;
+}
+
+.img-container {
+    display: flex;
+    margin-bottom: 15px;
+    align-items: center;
+}
+
+.imglast-container {
+    display: flex;
+    align-items: center;
+}
+
+.account {
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.account-text {
+    font-size: 12px;
+    color: grey;
+}  
+
+.trending-text {
+    margin-left: 15px;
+}
+
+.pokemon {
+    width: auto;
+    height: auto;
+    max-width: 40px;
+    max-height: 40px;
+    cursor: pointer;
+    margin-left: 15px;
 }
