--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 20px;
 }
 
 .logo {
@@ -141,6 +142,7 @@ body {
     display: flex;
     margin-left: 50px;
     align-items: center;
+    padding-top: 15px;
 }
 
 .pikachu-big {
@@ -163,6 +165,7 @@ body {
 }
 
 .bold {
+    font-size: 18px;
     font-weight: 900;
 }
 
@@ -171,7 +174,8 @@ body {
     grid-row: 2 / 3;
     display: flex;
     align-items: center;
-    
+    justify-content: flex-end;
+    margin-right: 40px;
 }
 
 .button {
@@ -183,7 +187,7 @@ body {
     align-items: center;
     color: white;
     border-radius: 20px;
-    margin-right: 30px;
+    margin-left: 30px;
     font-weight: 900px;
     cursor: pointer;
 }
@@ -217,6 +221,8 @@ body {
 
 .card {
     background-color: white;
+    display: flex;
+    flex-direction: column;
     border-radius: 10px;
 }
 
@@ -228,7 +234,8 @@ body {
 .card-icons {
     display: flex;
     justify-content: flex-end;
-    margin-top: 30px;
+    margin-top: auto;
+    margin-bottom: 20px;
     margin-right: 20px;
 }
 
@@ -245,7 +252,9 @@ body {
 
 .subtext {
     color: grey;
-    font-size: 12px;
+    font-size: 13px;
+    margin-top: 5px;
+    margin-right: 20px;
 }
 
 .top-section {
@@ -265,15 +274,14 @@ body {
 }
 
 .announce-card {
-    border: 1px solid black;
     margin-left: 20px;
-    padding-top: 20px;
+    padding-top: 30px;
     padding-left: 15px;
     padding-bottom: 20px;
     margin-right: 30px;
     border-radius: 10px;
     background-color: white;
-    height: 80%;
+    height: 70%;
 }
 
 .announce-text {
@@ -302,7 +310,6 @@ body {
     font-size: 20px;
     font-weight: 900;
     padding-bottom: 10px;
-    border: 1px solid black;
 }
 
 .trending-card {
@@ -315,7 +322,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 1px solid black;
 }
 
 .img-container {
@@ -337,6 +343,7 @@ body {
 .account-text {
     font-size: 12px;
     color: grey;
+    margin-top: 2px;
 }  
 
 .trending-text {
